# video-game-rag

./: .dockerignore  .gitignore  BUILD_SUMMARY.md  DEPLOYMENT.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  README_PRODUCTION.md  cloudbuild.yaml  cloudrun.yaml  deploy.sh  docker-compose.yml  pyproject.toml
scripts/: evaluate.py  fetch_games.py  index_data.py
src/: __init__.py  app.py  config.py
src/api/: __init__.py  cache.py  dependencies.py  main.py  middleware.py  schemas.py  secrets.py  tracing.py
src/api/routes/: __init__.py  admin.py  health.py  query.py
src/chunking/: __init__.py  strategies.py
src/data/: __init__.py  processor.py  wikipedia_client.py
src/embeddings/: __init__.py  embed.py
src/evaluation/: __init__.py  dataset.py  evaluator.py  metrics.py  trulens_eval.py
src/llm/: __init__.py  factory.py
src/rag/: __init__.py  agent.py  chain.py  reranker.py  retriever.py
src/vectorstores/: __init__.py  pinecone_store.py  qdrant_store.py
